phase 2: added libgdx graphical build alongside the terminal game. turn tick into Hz, some changes in game engine and sun, some animations extracted from libPVZ PAM.